feat: add analysis logic to analyze feeds